# leetcode

./: .gitignore  Cargo.toml  README.md  api.py  credentials.example.py  credentials.py  generate-test.js  local.py  package.json  test.py  update.py  work-on.py  work_on.py
dayOfTheWeek/: dayOfTheWeek.js
easy/1-bit-and-2-bit-characters/: #717-1-bit-and-2-bit-characters.md
easy/actors-and-directors-who-cooperated-at-least-three-times/: #1050-actors-and-directors-who-cooperated-at-least-three-times.md  #1136-actors-and-directors-who-cooperated-at-least-three-times.md
easy/add-binary/: #67-add-binary.md
easy/add-digits/: #258-add-digits.md  add-digits.js  add-digits.test.js
easy/add-strings/: #415-add-strings.md
easy/add-to-array-form-of-integer/: #1031-add-to-array-form-of-integer.md  #989-add-to-array-form-of-integer.md  add-to-array-form-of-integer.py
easy/ads-performance/: #1322-ads-performance.md  #1453-ads-performance.md
easy/all-valid-triplets-that-can-represent-a-country/: #1623-all-valid-triplets-that-can-represent-a-country.md
easy/armstrong-number/: #1090-armstrong-number.md  #1134-armstrong-number.md
easy/arranging-coins/: #441-arranging-coins.md  arranging-coins.py
easy/array-partition-i/: #561-array-partition-i.md  array-partition-i.js
easy/array-transformation/: #1175-array-transformation.md  #1243-array-transformation.md
easy/article-views-i/: #1148-article-views-i.md  #1258-article-views-i.md
easy/assign-cookies/: #455-assign-cookies.md  assign-cookies.py
easy/available-captures-for-rook/: #1041-available-captures-for-rook.md  #999-available-captures-for-rook.md  available-captures-for-rook.js  available-captures-for-rook.test.js
easy/average-of-levels-in-binary-tree/: #637-average-of-levels-in-binary-tree.md  average-of-levels-in-binary-tree.py
easy/average-salary-excluding-the-minimum-and-maximum-salary/: #1491-average-salary-excluding-the-minimum-and-maximum-salary.md  average-salary-excluding-the-minimum-and-maximum-salary.rs
easy/average-selling-price/: #1251-average-selling-price.md  #1390-average-selling-price.md
easy/average-time-of-process-per-machine/: #1661-average-time-of-process-per-machine.md
easy/backspace-string-compare/: #844-backspace-string-compare.md  #874-backspace-string-compare.md  backspace-string-compare.py  backspace-string-compare.rs
easy/balanced-binary-tree/: #110-balanced-binary-tree.md
easy/bank-account-summary-ii/: #1587-bank-account-summary-ii.md
easy/base-7/: #504-base-7.md  base-7.py
easy/baseball-game/: #682-baseball-game.md
easy/best-time-to-buy-and-sell-stock/: #121-best-time-to-buy-and-sell-stock.md  best-time-to-buy-and-sell-stock.py
easy/best-time-to-buy-and-sell-stock-ii/: #122-best-time-to-buy-and-sell-stock-ii.md  best-time-to-buy-and-sell-stock-ii.js  best-time-to-buy-and-sell-stock-ii.py
easy/big-countries/: #595-big-countries.md  big-countries.sql
easy/biggest-single-number/: #619-biggest-single-number.md
easy/binary-gap/: #868-binary-gap.md  #899-binary-gap.md
easy/binary-number-with-alternating-bits/: binary-number-with-alternating-bits.js  (+2 more)
easy/calculate-money-in-leetcode-bank/: #1716-calculate-money-in-leetcode-bank.md  Cargo.toml  calculate-money-in-leetcode-bank.rs
easy/check-array-formation-through-concatenation/: #1640-check-array-formation-through-concatenation.md  Cargo.toml  check-array-formation-through-concatenation.rs
easy/check-if-all-1s-are-at-least-length-k-places-away/: #1437-check-if-all-1s-are-at-least-length-k-places-away.md  Cargo.toml  check-if-all-1s-are-at-least-length-k-places-away.rs
easy/check-if-one-string-swap-can-make-strings-equal/: #1790-check-if-one-string-swap-can-make-strings-equal.md  Cargo.toml  check-if-one-string-swap-can-make-strings-equal.rs
easy/check-if-two-string-arrays-are-equivalent/: #1662-check-if-two-string-arrays-are-equivalent.md  Cargo.toml  check-if-two-string-arrays-are-equivalent.rs
easy/convert-sorted-array-to-binary-search-tree/: #108-convert-sorted-array-to-binary-search-tree.md  Cargo.toml  convert-sorted-array-to-binary-search-tree.rs
easy/count-of-matches-in-tournament/: #1688-count-of-matches-in-tournament.md  Cargo.toml  count-of-matches-in-tournament.rs
easy/crawler-log-folder/: #1598-crawler-log-folder.md  Cargo.toml  crawler-log-folder.rs
easy/decode-xored-array/: #1720-decode-xored-array.md  Cargo.toml  decode-xored-array.rs
easy/find-the-highest-altitude/: #1732-find-the-highest-altitude.md  Cargo.toml  find-the-highest-altitude.rs
easy/matrix-diagonal-sum/: #1572-matrix-diagonal-sum.md  Cargo.toml  matrix-diagonal-sum.rs
easy/maximum-score-after-splitting-a-string/: #1422-maximum-score-after-splitting-a-string.md  Cargo.toml  maximum-score-after-splitting-a-string.rs
easy/mean-of-array-after-removing-some-elements/: #1619-mean-of-array-after-removing-some-elements.md  Cargo.toml  mean-of-array-after-removing-some-elements.rs
easy/minimum-changes-to-make-alternating-binary-string/: #1758-minimum-changes-to-make-alternating-binary-string.md  Cargo.toml  minimum-changes-to-make-alternating-binary-string.rs
easy/number-of-rectangles-that-can-form-the-largest-square/: #1725-number-of-rectangles-that-can-form-the-largest-square.md  Cargo.toml  number-of-rectangles-that-can-form-the-largest-square.rs
easy/slowest-key/: #1629-slowest-key.md  Cargo.toml  slowest-key.rs
easy/special-array-with-x-elements-greater-than-or-equal-x/: #1608-special-array-with-x-elements-greater-than-or-equal-x.md  Cargo.toml  special-array-with-x-elements-greater-than-or-equal-x.rs
easy/sum-of-all-odd-length-subarrays/: #1588-sum-of-all-odd-length-subarrays.md  Cargo.toml  sum-of-all-odd-length-subarrays.rs
easy/surface-area-of-3d-shapes/: #892-surface-area-of-3d-shapes.md  #928-surface-area-of-3d-shapes.md  Cargo.toml  surface-area-of-3d-shapes.rs
easy/thousand-separator/: #1556-thousand-separator.md  Cargo.toml  thousand-separator.rs
misc/: focus.js
nextGreaterElement/: nextGreaterElement.js
toGoatLatin/: toGoatLatin.js
utils/: Cargo.toml  __init__.py  focus.js  generate-test.js
(+2663 files in other folders)
