[workspace]
members = [
    "utils",
    "easy/count-items-matching-a-rule",
    "easy/decode-xored-array",
    "easy/maximum-nesting-depth-of-the-parentheses",
    "easy/check-if-two-string-arrays-are-equivalent",
    "easy/design-an-ordered-stream",
    "easy/sum-of-all-odd-length-subarrays",
    "easy/count-of-matches-in-tournament",
    "easy/find-the-highest-altitude",
    "easy/number-of-rectangles-that-can-form-the-largest-square",
    "easy/matrix-diagonal-sum",
    "easy/determine-if-string-halves-are-alike",
    "easy/merge-strings-alternately",
]