[workspace]
members = [
    "utils",
    "easy/count-items-matching-a-rule",
    "easy/decode-xored-array",
    "easy/maximum-nesting-depth-of-the-parentheses",
    "easy/check-if-two-string-arrays-are-equivalent",
    "easy/design-an-ordered-stream",
    "easy/sum-of-all-odd-length-subarrays",
    "easy/count-of-matches-in-tournament",
    "easy/find-the-highest-altitude",
    "easy/number-of-rectangles-that-can-form-the-largest-square",
    "easy/matrix-diagonal-sum",
    "easy/determine-if-string-halves-are-alike",
    "easy/merge-strings-alternately",
    "easy/maximum-number-of-balls-in-a-box",
    "easy/sum-of-unique-elements",
    "easy/maximum-units-on-a-truck",
    "easy/number-of-students-unable-to-eat-lunch",
    "easy/find-nearest-point-that-has-the-same-x-or-y-coordinate",
    "easy/sort-array-by-increasing-frequency",
    "easy/calculate-money-in-leetcode-bank",
    "easy/maximum-ascending-subarray-sum",
    "easy/reformat-phone-number",
    "easy/mean-of-array-after-removing-some-elements",
    "easy/special-positions-in-a-binary-matrix",
    "easy/crawler-log-folder",
    "easy/check-if-one-string-swap-can-make-strings-equal",
    "easy/check-if-all-1s-are-at-least-length-k-places-away",
    "easy/defuse-the-bomb",
    "easy/check-if-array-is-sorted-and-rotated",
    "easy/longest-nice-substring",
    "easy/special-array-with-x-elements-greater-than-or-equal-x",
    "easy/consecutive-characters",
    "easy/water-bottles",
    "easy/reformat-date",
    "/home/yue/dev/leetcode/easy/slowest-key",
    "/home/yue/dev/leetcode/easy/check-array-formation-through-concatenation",
    "/home/yue/dev/leetcode/easy/largest-perimeter-triangle",
    "/home/yue/dev/leetcode/easy/kth-missing-positive-number",
    "/home/yue/dev/leetcode/easy/convert-sorted-array-to-binary-search-tree",
    "/home/yue/dev/leetcode/easy/thousand-separator",
    "/home/yue/dev/leetcode/easy/move-zeroes",
    "/home/yue/dev/leetcode/easy/maximum-score-after-splitting-a-string",
]