[package]
name = "check-array-formation-through-concatenation"
version = "0.1.0"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../../utils"}

[[bin]]
name = "check-array-formation-through-concatenation"
path = "check-array-formation-through-concatenation.rs"
