[package]
name = "check-if-one-string-swap-can-make-strings-equal"
version = "0.1.0"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../../utils"}

[[bin]]
name = "check-if-one-string-swap-can-make-strings-equal"
path = "check-if-one-string-swap-can-make-strings-equal.rs"
