[package]
name = "convert-sorted-array-to-binary-search-tree"
version = "0.1.0"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../../utils"}

[[bin]]
name = "convert-sorted-array-to-binary-search-tree"
path = "convert-sorted-array-to-binary-search-tree.rs"
