[package]
name = "find-the-highest-altitude"
version = "0.1.0"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../../utils"}

[[bin]]
name = "find-the-highest-altitude"
path = "find-the-highest-altitude.rs"
