[package]
name = "matrix-diagonal-sum"
version = "0.1.0"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../../utils"}

[[bin]]
name = "matrix-diagonal-sum"
path = "matrix-diagonal-sum.rs"
