[package]
name = "number-of-rectangles-that-can-form-the-largest-square"
version = "0.1.0"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../../utils"}

[[bin]]
name = "number-of-rectangles-that-can-form-the-largest-square"
path = "number-of-rectangles-that-can-form-the-largest-square.rs"
