[package]
name = "special-array-with-x-elements-greater-than-or-equal-x"
version = "0.1.0"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../../utils"}

[[bin]]
name = "special-array-with-x-elements-greater-than-or-equal-x"
path = "special-array-with-x-elements-greater-than-or-equal-x.rs"
