[package]
name = "surface-area-of-3d-shapes"
version = "0.1.0"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../../utils"}

[[bin]]
name = "surface-area-of-3d-shapes"
path = "surface-area-of-3d-shapes.rs"
